# md2cb

./: .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  AGENTS.md  Cargo.toml  Makefile  Package.swift  README.md  Roadmap.md  build.rs  mise.toml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
Sources/MarkdownParser/: MarkdownParser.swift  Styles.swift
Sources/md2cb/: md2cb.swift
Tests/MarkdownParserTests/: MarkdownParserTests.swift
assets/: github-markdown.css  mathjax-bundle.js
e2e/fixtures/: 01-basic-text.md  02-lists.md  03-tables.md  04-code-blocks.md  05-math.md  06-links-images.md  07-full-demo.md  08-mermaid.md
scripts/: build-mathjax.js  e2e-test.js  install.ps1  install.sh  math-to-svg.js  mathjax-entry.js
src/: clipboard.rs  images.rs  js_runtime.rs  main.rs  parser.rs  svg_render.rs
test/: .gitignore  comparison-report.json  comparison-test.js  demo.md  index.html  mathjax-test.js  paste-test.js  visual-comparison.js
test/edge-cases/: 01-inline-code.md  02-nested-blockquotes.md  03-complex-tables.md  04-links.md  05-mixed-formatting.md  06-lists-advanced.md  07-math-edge.md  08-html-passthrough.md  09-escapes.md  10-code-blocks.md  11-stress-test.md  12-complex-math.md  13-special-chars.md
