[package]
name = "md2cb"
version = "0.0.1"
edition = "2024"
description = "Convert GitHub Flavored Markdown to rich HTML clipboard content"
license = "MIT"

[dependencies]
arboard = "3"
comrak = { version = "0.31", default-features = false, features = ["syntect"] }
regex = "1"
base64 = "0.22"
ureq = "2"

# Embedded JavaScript engine for MathJax
rquickjs = { version = "0.9", features = ["bindgen"] }

# SVG to PNG rendering
resvg = "0.44"

# JSON parsing for JS runtime communication
serde_json = "1"

# Native Mermaid diagram rendering (no browser/Node.js needed)
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
